--- a/CourseWork/Views/AdminViews/MainAdminView.xaml
+++ b/CourseWork/Views/AdminViews/MainAdminView.xaml
@@ -21,22 +21,34 @@
         <Grid Grid.Row="1">
             <materialDesign:Card Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
                 <StackPanel Grid.Row="1" Background="#734046">
-                    <RadioButton x:Name="usersRadio" Content="Users" Command="{Binding OpenUsers}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"/>
-                    <RadioButton x:Name="ordershRadio" Content="Orders" Command="{Binding OpenOrders}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  />
-                    <RadioButton x:Name="providersRadio" Content="Providers" Command="{Binding OpenProviders}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" />
-                    <RadioButton x:Name="partsRadio" Content="Parts" Command="{Binding OpenParts}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" />
-                    <RadioButton x:Name="delivRadio" Content="Deliveries" Command="{Binding OpenDeliveries}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
-                    <RadioButton x:Name="marksRadio" Content="Marks" Command="{Binding OpenMarks}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
-                    <RadioButton x:Name="catRadio" Content="Categories" Command="{Binding OpenCategories}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
-                    <RadioButton x:Name="cardsRadio" Content="Cards" Command="{Binding OpenCards}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
+                    <RadioButton x:Name="usersRadio" Content="{DynamicResource Users}" Command="{Binding OpenUsers}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"/>
+                    <RadioButton x:Name="ordershRadio" Content="{DynamicResource Orders}" Command="{Binding OpenOrders}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  />
+                    <RadioButton x:Name="providersRadio" Content="{DynamicResource Providers}" Command="{Binding OpenProviders}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" />
+                    <RadioButton x:Name="partsRadio" Content="{DynamicResource Parts}" Command="{Binding OpenParts}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" />
+                    <RadioButton x:Name="delivRadio" Content="{DynamicResource Deliveries}" Command="{Binding OpenDeliveries}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
+                    <RadioButton x:Name="marksRadio" Content="{DynamicResource Marks}" Command="{Binding OpenMarks}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
+                    <RadioButton x:Name="catRadio" Content="{DynamicResource Categories}" Command="{Binding OpenCategories}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
+                    <RadioButton x:Name="cardsRadio" Content="{DynamicResource Cards}" Command="{Binding OpenCards}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
                     <RadioButton x:Name="optRadio" Content="{DynamicResource Settings}" Command="{Binding OpenSettings}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}"  VerticalAlignment="Bottom" />
                 </StackPanel>
             </materialDesign:Card>
 
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
-            <materialDesign:Card Margin="5" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-                
+            <materialDesign:Card Background="#734046" UniformCornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth4">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="1">
+                        <Menu Background="Transparent" VerticalAlignment="Center">
+                            <Button Background="Transparent" Command="{Binding Exit}" BorderBrush="Transparent" Width="60" Height="60" Margin="0,0,15,0">
+                                <materialDesign:PackIcon Kind="ExitToApp" Width="25" Height="25" Margin="0,0,0,5"/>
+                            </Button>
+                        </Menu>
+                    </Grid>
+                </Grid>
             </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="1" x:Name="MainGrid">
