--- a/CourseWork/Views/AdminViews/MarksAdminView.xaml
+++ b/CourseWork/Views/AdminViews/MarksAdminView.xaml
@@ -40,8 +40,8 @@
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0" Margin="0,0,0.4,0">
                         <StackPanel Orientation="Horizontal">
-                            <Button Command="{Binding SaveCommand}" Style="{StaticResource RoundedButtonStyle}" Height="40" Width="60" Content="Save"/>
-                            <Button Command="{Binding AddCommand}" Style="{StaticResource RoundedButtonStyle}" Height="40" Width="60" Content="Add"/>
+                            <Button Command="{Binding SaveCommand}" Style="{StaticResource RoundedButtonStyle}" Height="40" Width="60" Content="{DynamicResource Save}"/>
+                            <Button Command="{Binding AddCommand}" Style="{StaticResource RoundedButtonStyle}" Height="40" Width="60" Content="{DynamicResource Add}"/>
                         </StackPanel>
                     </Grid>
                     <Grid Grid.Row="1">
