--- a/CourseWork/Views/CancelOrderView.xaml
+++ b/CourseWork/Views/CancelOrderView.xaml
@@ -30,10 +30,10 @@
                         <TextBlock Text="{DynamicResource CancelOrder}" FontSize="20" TextWrapping="Wrap" TextAlignment="Center" Margin="0,20,0,0"/>
                     </Grid>
                     <Grid Grid.Row="1">
-                        <TextBox Height="40" Text="{Binding codeFromView}" Width="400" materialDesign:HintAssist.Hint="Cancelation code"/>
+                        <TextBox TextAlignment="Center" FontSize="16" Height="40" Text="{Binding codeFromView}" Width="400" materialDesign:HintAssist.Hint="Cancelation code"/>
                     </Grid>
                     <Grid Grid.Row="2">
-                        <Button Width="200" Content="{DynamicResource ConfirmButton}" Style="{StaticResource RoundedButtonStyle}" Command="{Binding CancelOrder}" Height="40"/>
+                        <Button Width="200" FontSize="16" Content="{DynamicResource ConfirmButton}" Style="{StaticResource RoundedButtonStyle}" Command="{Binding CancelOrder}" Height="40"/>
                     </Grid>
                 </Grid>
             </materialDesign:Card>
