Minor validation fixes; Added an explanatory note

--- a/CourseWork/Resources/language.ru-RU.xaml
+++ b/CourseWork/Resources/language.ru-RU.xaml
@@ -61,4 +61,5 @@
     <v:String x:Key="Email">Электронная почта</v:String>
     <v:String x:Key="FirstName">Имя</v:String>
     <v:String x:Key="Surname">Фамилия</v:String>
+    <v:String x:Key="Deposit">Пополнить</v:String>
 </ResourceDictionary>
