--- a/CourseWork/MainWindow.xaml
+++ b/CourseWork/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:CourseWork"
         xmlns:view="clr-namespace:CourseWork.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000" Background="#a05344">
+        Title="AutoLight" Height="600" Width="1000" Background="#a05344">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="32*"/>
