--- a/CourseWork/Views/AdminViews/MainAdminView.xaml
+++ b/CourseWork/Views/AdminViews/MainAdminView.xaml
@@ -6,7 +6,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:CourseWork.Views.AdminViews"
         mc:Ignorable="d"
-        Title="MainAdminView" Height="600" Width="1000" Background="#a05344">
+        Title="AutoLight admin panel" Height="600" Width="1000" Background="#a05344">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="32*"/>
